Female model & BG color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main>
         <div class="char-container">
-            <img id="chrImg" class="screenOpening-animation" src="Media-files/Cyberpun ai.png" alt="Avatar Image">
+            <img id="chrImg" class="screenOpening-animation" src="Media-files/Blue-Fmodel-croped.png" alt="Avatar Image">
         </div>
         <h1>I'm <span id="name"></span>, Your <span id="role">Virtual Assistant</span></h1>
         <button id="btn">
